[package]
name = "notectl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
directories = "6.0.0"
figlet-rs = "0.1.5"
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
