[package]
name = "rock_treasure_hunter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
directories = "6.0.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-eyre = { version = "0.6.4", default-features = false }
color-backtrace = "0.7.0"                                    # pretty panic + colored-eyre integration
